<resources>

    <string name="app_name">Barclays Premier League</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_soccer">Barclays Premier League</string>
    <string name="topbar">Barclays Premier League</string>
    <string name="date">Date</string>
    <string name="no_match_today">Sorry there are no matches scheduled today</string>
    <string name="match_on">Matches Scheduled on</string>
    <string name="club">Club</string>
    <string name="matches_of">Matches of</string>
    <string name="founded">Founded :</string>
	<string name="manager">Manager :</string>
	<string name="homeground">Home Ground :</string>
	<string name="bestrank">Best Rank :</string>
	<string name="titles">Titles :</string>
	<string name="wins">Wins* :</string>
	<string name="draw">Draw* :</string>
	<string name="lost">Lost* :</string>
	<string name="points">Points* :</string>
	<string name="website">Homepage :</string>
	<string name="squad">Squad :</string>
	<string name="sponsor">Shirt Sponsor :</string>
	<string name="notify">* - Figures till last season ( From 1992-2011 )</string>
	<string name="clubstandings">Current Club Standings</string>
	<string name="position">Pos</string>
	<string name="played">PL</string>
	<string name="wins_cs">W</string>
	<string name="draw_cs">D</string>
	<string name="lost_cs">L</string>
	<string name="points_cs">Points</string>
	<string name="compFormat">Comptition Format</string>	
	<string name="formatTxt" > There are 20 clubs in the Premier League. During the course of a season (from August to May) each club plays the others twice (a double round-robin system), once at their home stadium and once at that of their opponents, for a total of 38 games. Teams receive three points for a win and one point for a draw. No points are awarded for a loss. Teams are ranked by total points, then goal difference, and then goals scored. At the end of each season, the club with the most points is crowned champion. If points are equal, the goal difference and then goals scored determine the winner. If still equal, teams are deemed to occupy the same position. If there is a tie for the championship, for relegation, or for qualification to other competitions, a play-off match at a neutral venue decides rank. The three lowest placed teams are relegated into the Football League Championship, and the top two teams from the Championship, together with the winner of play-offs involving the third to sixth placed Championship clubs, are promoted in their place.</string>
	<string name="filter_date">Date</string>
	<string name="filter_team">Team</string>
	<string name="select_club">Select a Club</string>
	<string name="change_date">Change Date</string>
	<string name="player_name">Player</string>
	<string name="goals">Goals</string>
	<string name="assists">Assists</string>
	<string name="comploading_messageformat">Competition Format</string>
	<string name="loading_message">Loading Please Wait . . . !!!</string>
	<string name="compformat">Competition Format</string>
	<string name="all_clubs">All Clubs</string>
	<string name="no_matches">No matches on the selected date</string>
	<string name="about">About</string>
	<string name="about_title">About BPL info</string>
	<string name="about_info">BPL Info Developed by Appvilla Group.\nApp version:  2.0 \nContact Us at innovationxprt@gmail.com</string>
	<string name="close">Close</string>
	<string name="refresh">Refresh</string>
	<string name="network_error_title">Network Error !!!</string>
	<string name="network_error_message">Network Connection Issue.\n Please Check your Internet Connection.\n Data will not be updated without Internet Connection.</string>
	<string name="db_loading_message">Data is updating. Please Wait . . . !!!</string>
	<string name="details">Details</string>
</resources>